# clipboard-rotative

./: README.md  pyproject.toml
clipboard_rotative/: __init__.py  __main__.py  cli.py
